added starter file in JSON, deleted localhost password, changed port number for heroku

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "eat-da-burger is a restaurant app that lets users input the names of burgers they'd like to eat",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
